[gd_scene load_steps=5 format=2]

[ext_resource path="res://BulletEnemy.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
emission_enabled = true
emission = Color( 0.792157, 0, 0, 1 )
emission_energy = 10.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereShape" id=3]

[node name="BulletEnemy" type="RigidBody" groups=["BulletEnemy"]]
transform = Transform( 2.78313, 0, 0, 0, 2.78313, 0, 0, 0, 2.78313, 0, 0, 0 )
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.255139, 0, 0, 0, 0.362679, 0, 0, 0, 5.73646, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1.01585, 0, 0, 0, 1.13323, 0, 0, 0, -10.1238, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
